--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
 h1 {
     text-align: center;
     font-size: 100px;
@@ -18,3 +22,17 @@ img {
     border-radius: 25px;
 }
 
+h2 {
+    text-align: center;
+}
+
+.bigger {
+    text-align: center;
+    font-size: larger;
+    color: #3a1919;
+    text-decoration: none
+}
+
+body {
+    background-color: bisque;
+}
